--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,61 @@
+appnope==0.1.0
 attrs==19.3.0
-importlib-metadata==1.6.1
-jsonschema==3.2.0
-pyrsistent==0.16.0
-six==1.15.0
-zipp==3.1.0
+backcall==0.2.0
+blis==0.4.1
+catalogue==1.0.0
+certifi==2020.6.20
+chardet==3.0.4
+cycler==0.10.0
+cymem==2.0.3
+decorator==4.4.2
 fastai2==0.0.17
+fastcore==0.1.18
+fastprogress==0.2.3
+future==0.18.2
+idna==2.9
+importlib-metadata==1.6.1
+ipykernel==5.3.0
+ipython==7.15.0
+ipython-genutils==0.2.0
+jedi==0.17.1
+joblib==0.15.1
+jsonschema==3.2.0
+jupyter-client==6.1.3
+jupyter-core==4.6.3
+kiwisolver==1.2.0
+matplotlib==3.2.2
+murmurhash==1.0.2
+numpy==1.19.0
+pandas==1.0.5
+parso==0.7.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==7.1.2
+plac==1.1.3
+preshed==3.0.2
+prompt-toolkit==3.0.5
+ptyprocess==0.6.0
+Pygments==2.6.1
+pyparsing==2.4.7
+pyrsistent==0.16.0
+python-dateutil==2.8.1
+pytz==2020.1
+PyYAML==5.3.1
+pyzmq==19.0.1
+requests==2.24.0
+scikit-learn==0.23.1
+scipy==1.5.0
+six==1.15.0
+spacy==2.3.0
+srsly==1.0.2
+thinc==7.4.1
+threadpoolctl==2.1.0
+torch==1.5.1
+torchvision==0.6.1
+tornado==6.0.4
+tqdm==4.46.1
+traitlets==4.3.3
+urllib3==1.25.9
+wasabi==0.7.0
+wcwidth==0.2.4
+zipp==3.1.0
